2006-05-09  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/lang/Thread/security.java: Removed unused stuff.

2005-04-29  Sven de Marothy  <sven@physto.se>

	* gnu/testlet/java/util/Calendar/setTimeZone.java:
	Test that fields are recalculated on setTimeZone.
	
2006-05-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/util/zip/Deflater/PR27435.java:
	Test for the bug in PR#27435.
	
2006-05-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/text/DecimalFormat/PR27311.java:
	Test for the bug in PR#27311.
	
2006-05-06  Olivier Jolly  <olivier.jolly@pcedev.com>
    
	* gnu/testlet/java/util/Calendar/add.java: (test): Added call to the new
	test.
	(testPreviousDate): Regression test for PR27362, which ensures that
	Calendar.clear(int) doesn't swallow previous calendar changes.

2006-05-05  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/lang/ThreadGroup/security.java: Rearranged to
	work with class libraries other than Classpath.
	
2006-05-04  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/lang/Thread/security.java: Added some missing
	constructor tests, and rearranged to work with class libraries
	other than Classpath.

2006-05-03  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/text/GapContent/constructors.java:
	(testConstructor2): Put checks into try-catch block. added a second
	length check.
	* gnu/testlet/javax/swing/text/GapContent/insertString.java:
	(testGeneral): Added note.

2006-05-01  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/util/HashMap/AcuniaHashMapTest.java
	(test_entrySet): Iterator.hasNext() does not throw
	ConcurrentModificationException - update test accordingly.
	* gnu/testlet/java/util/LinkedHashMap/LinkedHashMapTest.java
	(test_entrySet): Likewise.

2006-05-01  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/util/Calendar/add.java: (test): Fixed compilation error
	introduced by the addition of the TimeZone test.